ref: change some variable name
